(fix) main-product-cart layout problems fixed

--- a/css/product.css
+++ b/css/product.css
@@ -21,46 +21,43 @@
   border-left: 2px solid #9f9f9f;
 }
 .main-product-cart {
-  padding: 4.8rem;
   display: grid;
-  grid-template-columns: 1fr 8fr;
+  grid-template-columns: repeat(3, auto);
+  align-items: flex-start;
+  justify-content: start;
   gap: 3.2rem;
+  padding: 6.4rem;
 }
 .product-aside {
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
-  align-items: flex-end;
+  justify-content: flex-start;
 }
 
 .product-aside-img-box {
   background-color: #f9f1e7;
   border-radius: 7.5px;
-  width: 80%;
+  max-width: 128px;
 }
 
 .product-aside-img {
-  width: 100%;
+  width: 128px;
   display: block;
   object-fit: cover;
 }
-.main-product {
-  display: flex;
-  gap: 6.4rem;
-  padding-right: 6.4rem;
-}
 
 .main-product-img {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
   border-radius: 7.5px;
+  width: 380px;
+  height: 100%;
+  margin-right: 4.8rem;
 }
 .product-info {
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
-  padding-right: 6.4rem;
 }
 .product-title {
   font-size: 4.2rem;
